<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/couleur" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textStyle="bold"
                android:text="@string/name" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/email" />

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adresse" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32dp"
        android:text="@string/titre_exp" />

    <ListView
        android:id="@+id/listViewExperiences"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_experience"
        />

    <TextView
        android:id="@+id/textView2"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:text="@string/titre_form" />

    <ListView
        android:id="@+id/listViewFormations"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_formation"/>

    <Button
        android:id="@+id/buttonCompetence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_comp" />

</LinearLayout>